--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.loopj.android.http"
+          package="com.cloudmine.api"
           android:versionName="1.0"
           android:versionCode="1">
     <uses-sdk android:minSdkVersion="3" />
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:name="cloudmine_javasdk"
         >
     </application>
 </manifest>
