--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.8.1</version>
                 <configuration>
-                    <excludePackageNames>com.cloudmine.api.rest.URLBuilder</excludePackageNames>
+                    <doclet></doclet>
                 </configuration>
             </plugin>
         </plugins>
