--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.0.0-RC2</version>
+            <version>2.2.1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
