--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
                     <artifactId>httpclient</artifactId>
                     <version>4.0-beta2</version>
                 </dependency>
+                <dependency>
+                    <groupId>com.android</groupId>
+                    <artifactId>volley</artifactId>
+                    <version>1.0</version>
+                </dependency>
+
             </dependencies>
         </profile>
         <profile>
