Rely on cloudmine implementation of volley instsead of google

--- a/pom.xml
+++ b/pom.xml
@@ -115,9 +115,9 @@
                     <version>4.0-beta2</version>
                 </dependency>
                 <dependency>
-                    <groupId>com.android</groupId>
+                    <groupId>com.android.cloudmine</groupId>
                     <artifactId>volley</artifactId>
-                    <version>1.0</version>
+                    <version>1.0-SNAPSHOT</version>
                 </dependency>
 
             </dependencies>
