--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.cloudmine.api</groupId>
     <artifactId>cloudmine-javasdk</artifactId>
-    <version>0.5.2</version>
+    <version>0.5.3</version>
     <packaging>jar</packaging>
 
     <build>
@@ -102,7 +102,7 @@
                 <dependency>
                     <groupId>com.cloudmine.api</groupId>
                     <artifactId>cloudmine-android</artifactId>
-                    <version>0.5.2</version>
+                    <version>0.5.3</version>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.httpcomponents</groupId>
@@ -114,12 +114,6 @@
                     <artifactId>httpclient</artifactId>
                     <version>4.0-beta2</version>
                 </dependency>
-                <dependency>
-                    <groupId>com.android.cloudmine</groupId>
-                    <artifactId>volley</artifactId>
-                    <version>1.0-SNAPSHOT</version>
-                </dependency>
-
             </dependencies>
         </profile>
         <profile>
@@ -147,6 +141,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.10</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
