--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
                     <artifactId>volley</artifactId>
                     <version>1.0-SNAPSHOT</version>
                 </dependency>
+                <dependency>
+                  <groupId>com.squareup.okhttp</groupId>
+                  <artifactId>okhttp</artifactId>
+                  <version>1.2.1</version>
+                </dependency>
 
             </dependencies>
         </profile>
