Allow for generation of test-jar

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,15 @@
             </plugin>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                  <execution>
+                    <goals>
+                      <goal>
+                        test-jar
+                      </goal>
+                    </goals>
+                  </execution>
+                </executions>
                 <configuration>
                     <archive>
                         <manifest>
